[OpenMP][Offload] Do not try to build CUDA device RTL in LLVM bitcode
JIRA: CMPLRLIBS-33504

Change-Id: Id77d422289a2666b231c2a9fcab54e6df6ab7ce9
Reviewed-on: https://git-amr-2.devtools.intel.com/gerrit/337815
Reviewed-by: Narayanaswamy, Ravi <ravi.narayanaswamy@intel.com>
Reviewed-by: Bae, Hansang <hansang.bae@intel.com>
Tested-by: Bae, Hansang <hansang.bae@intel.com>

--- a/openmp/libomptarget/deviceRTLs/nvptx/CMakeLists.txt
+++ b/openmp/libomptarget/deviceRTLs/nvptx/CMakeLists.txt
@@ -11,8 +11,12 @@
 ##===----------------------------------------------------------------------===##
 
 # By default we will build NVPTX deviceRTL on a CUDA free system
-set(LIBOMPTARGET_BUILD_NVPTX_BCLIB TRUE CACHE BOOL
+if(INTEL_CUSTOMIZATION)
+# Do not try to build unless native CUDA compiler exists.
+# Our build compiler or in-tree compiler does not allow emitting bitcode.
+set(LIBOMPTARGET_BUILD_NVPTX_BCLIB FALSE CACHE BOOL
   "Whether build NVPTX deviceRTL on CUDA free system.")
+endif(INTEL_CUSTOMIZATION)
 
 if (NOT (LIBOMPTARGET_DEP_CUDA_FOUND OR LIBOMPTARGET_BUILD_NVPTX_BCLIB))
   libomptarget_say("Not building NVPTX deviceRTL by default on CUDA free system.")
