[DPCPPKernelTransforms] Add pass to set 'recommended_vector_length' metadata
Change-Id: Idf7fa0042e43f09b95a55eb4bee1b31f1ba9747e
Reviewed-on: https://git-amr-2.devtools.intel.com/gerrit/337852
Tested-by: xmain_checkin <lab_iclt@iclgerrit.sc.intel.com>
Reviewed-by: Dai, Chunyang <chunyang.dai@intel.com>
Reviewed-by: Mikhail Lychkov <mikhail.lychkov@intel.com>

--- a/llvm/lib/Transforms/Intel_DPCPPKernelTransforms/CMakeLists.txt
+++ b/llvm/lib/Transforms/Intel_DPCPPKernelTransforms/CMakeLists.txt
@@ -34,6 +34,7 @@ add_llvm_component_library(LLVMIntel_DPCPPKernelTransforms
   WIRelatedValuePass.cpp
   PrepareKernelArgs.cpp
   CleanupWrappedKernel.cpp
+  SetVectorizationFactor.cpp
   VectorVariant/CreateSimdVariantPropagation.cpp
   VectorVariant/SGSizeCollector.cpp
   VectorVariant/SGSizeCollectorIndirect.cpp
