[Non-spirv CPU] Use legacy C++ pipeline for sycl-target=x86_64 by default
Env CL_CONFIG_LTO_PM will be able to override this default setting.

Change-Id: Ib9e807735c3774dc75b755d982f99def3f22387d
Reviewed-on: https://git-amr-2.devtools.intel.com/gerrit/338051
Tested-by: xmain_checkin <lab_iclt@iclgerrit.sc.intel.com>
Reviewed-by: Dai, Chunyang <chunyang.dai@intel.com>
Reviewed-by: Mikhail Lychkov <mikhail.lychkov@intel.com>

--- a/opencl-intel/backend/tests/opencl/SATest/pipeline/pipeline_lto_legacy_pm.tst.cfg
+++ b/opencl-intel/backend/tests/opencl/SATest/pipeline/pipeline_lto_legacy_pm.tst.cfg
@@ -2,6 +2,6 @@
 <RunConfiguration>
     <UseVTune>0</UseVTune>
     <UseVectorizer>0</UseVectorizer>
-    <ProgramFile compilation_flags="">pipeline.tst.cl</ProgramFile>
-    <ProgramFileType>CL</ProgramFileType>
+    <ProgramFile compilation_flags="">pipeline.tst.ll</ProgramFile>
+    <ProgramFileType>LL</ProgramFileType>
 </RunConfiguration>
