--- a/opencl-intel/backend/tests/opencl/SATest/pipeline/pipeline_lto_legacy_pm_O0.tst.cfg
+++ b/opencl-intel/backend/tests/opencl/SATest/pipeline/pipeline_lto_legacy_pm_O0.tst.cfg
@@ -2,6 +2,6 @@
 <RunConfiguration>
     <UseVTune>0</UseVTune>
     <UseVectorizer>0</UseVectorizer>
-    <ProgramFile compilation_flags="-cl-opt-disable">pipeline.tst.cl</ProgramFile>
-    <ProgramFileType>CL</ProgramFileType>
+    <ProgramFile compilation_flags="">pipeline.tst.O0.ll</ProgramFile>
+    <ProgramFileType>LL</ProgramFileType>
 </RunConfiguration>
