[1/3][DPCPPKernelTransforms] Port OCLVPOCheckVF from opencl-intel as an analysis pass
Change-Id: Ib01a9d3a09b8f5de635e70cf8a421eb160d8dfc5
Reviewed-on: https://git-amr-2.devtools.intel.com/gerrit/338054
Tested-by: xmain_checkin <lab_iclt@iclgerrit.sc.intel.com>
Reviewed-by: Zhang, Senran <senran.zhang@intel.com>
Reviewed-by: Mikhail Lychkov <mikhail.lychkov@intel.com>

--- a/llvm/lib/Transforms/Intel_DPCPPKernelTransforms/CMakeLists.txt
+++ b/llvm/lib/Transforms/Intel_DPCPPKernelTransforms/CMakeLists.txt
@@ -41,6 +41,7 @@ add_llvm_component_library(LLVMIntel_DPCPPKernelTransforms
   VectorVariant/UpdateCallAttrs.cpp
   VectorVariant/VectorVariantFillIn.cpp
   VectorVariant/VectorVariantLowering.cpp
+  VFAnalysis.cpp
 
   Utils/CPUDetect.cpp
   Utils/FunctionDescriptor.cpp
