Revert "Replace LLVMEqualizer pass with ported pass in Intel_DPCPPKernelTransforms"
This reverts commit 888414bc788d0ce677517d19b024f69bbc9dc103.

Change-Id: I0263959a3e86410d9f6b23b28d6b604bfd24d6ab
Reviewed-on: https://git-amr-2.devtools.intel.com/gerrit/338309
Reviewed-by: Yilong Guo <yilong.guo@intel.com>
Tested-by: Yilong Guo <yilong.guo@intel.com>

--- a/opencl-intel/backend/libraries/kernel/CMakeLists.txt
+++ b/opencl-intel/backend/libraries/kernel/CMakeLists.txt
@@ -17,7 +17,7 @@ function(create_ocl_kernel_target CLANG_FLAGS INPUT_CL TMP_DIR OUTPUT_DIR OUTPUT
     DEPENDS ${CLANG} ${OPT} ${INPUT_CL}
     COMMAND ${CLANG} ${CLANG_FLAGS} ${INPUT_CL}
             -o ${TMP_DIR}/${OUTPUT_BC_FILE}
-    COMMAND ${OPT} ${TMP_DIR}/${OUTPUT_BC_FILE} -verify -dpcpp-kernel-equalizer
+    COMMAND ${OPT} ${TMP_DIR}/${OUTPUT_BC_FILE} -verify -llvm-equalizer
             -dpcpp-kernel-analysis -cl-loop-bound -deduce-max-dim -cl-loop-creator
             -loop-idiom -loop-deletion -dpcpp-kernel-add-implicit-args
             -resolve-wi-call -dpcpp-kernel-prepare-args -inline -dce -globaldce
