--- a/opencl-intel/backend/ocl_cpu_backend/CMakeLists.txt
+++ b/opencl-intel/backend/ocl_cpu_backend/CMakeLists.txt
@@ -252,6 +252,7 @@ set( BACKEND_PASSES
     Prefetch
     SubGroupAdaptation
     ResolveBlockToStaticCall
+    LLVMEqualizer
     PatchCallbackArgs
     SinCosFold
     SmartGVN
