--- a/opencl-intel/backend/ocl_opt/CMakeLists.txt
+++ b/opencl-intel/backend/ocl_opt/CMakeLists.txt
@@ -29,6 +29,7 @@ set(OCL_BE_PASSES
     SubGroupAdaptation
     LocalBuffAnalysis
     LocalBuffers
+    LLVMEqualizer
     OclFunctionAttrs
     PatchCallbackArgs
     PipeIOTransformation
