Fix missing v64 masked version of work_group_broadcast
Change-Id: Id1462da0774c188ce2763989647259c1df28c622
Reviewed-on: https://git-amr-2.devtools.intel.com/gerrit/338675
Tested-by: xmain_checkin <lab_iclt@iclgerrit.sc.intel.com>
Reviewed-by: Yilong Guo <yilong.guo@intel.com>
Reviewed-by: Mikhail Lychkov <mikhail.lychkov@intel.com>

--- a/opencl-intel/backend/tests/lit.cfg
+++ b/opencl-intel/backend/tests/lit.cfg
@@ -99,6 +99,9 @@ opencl_binaries_dir = getattr(config, 'opencl_binary_dir', None)
 config.substitutions.append(('%oclopt',
     os.path.join(opencl_binaries_dir, 'oclopt')))
 
+opencl_library_dir = getattr(config, 'opencl_library_dir', None)
+config.substitutions.append(('%libdir', opencl_library_dir))
+
 if os.pathsep == ';':
     pathext = os.environ.get('PATHEXT', '').split(';')
 else:
