--- a/opencl-intel/backend/tests/lit.site.cfg.in
+++ b/opencl-intel/backend/tests/lit.site.cfg.in
@@ -4,6 +4,7 @@ import sys
 import lit.util
 
 config.opencl_binary_dir = "@OCL_OUTPUT_BINARY_DIR@"
+config.opencl_library_dir = "@OCL_OUTPUT_LIBRARY_DIR@"
 config.opencl_tests_binary_dir = "@OCL_TESTS_BINARY_DIR@"
 config.operating_system = "@CMAKE_SYSTEM_NAME@"
 config.intree_build = "@OPENCL_INTREE_BUILD@"
