[DPCPPKernelTransforms] Port ResolveSubGroupWICall pass
Change-Id: I05c47a54148eeecbe69c07cafa4a7a552eff7d51
Reviewed-on: https://git-amr-2.devtools.intel.com/gerrit/338719
Reviewed-by: Yilong Guo <yilong.guo@intel.com>
Tested-by: xmain_checkin <lab_iclt@iclgerrit.sc.intel.com>
Reviewed-by: Mikhail Lychkov <mikhail.lychkov@intel.com>

--- a/llvm/lib/Transforms/Intel_DPCPPKernelTransforms/CMakeLists.txt
+++ b/llvm/lib/Transforms/Intel_DPCPPKernelTransforms/CMakeLists.txt
@@ -29,6 +29,7 @@ add_llvm_component_library(LLVMIntel_DPCPPKernelTransforms
   DataPerValuePass.cpp
   BarrierPass.cpp
   BarrierInFunctionPass.cpp
+  ResolveSubGroupWICall.cpp
   ResolveWICall.cpp
   SplitBBonBarrierPass.cpp
   WIRelatedValuePass.cpp
