[OpenMP][Offload] Fix LIT test failures after pulldown
JIRA: CMPLRLIBS-33525

Change-Id: I670b5a4f435abd4fbbe10b332c7e1fe9c244628f
Reviewed-on: https://git-amr-2.devtools.intel.com/gerrit/338767
Reviewed-by: Gaba, Abhinav <abhinav.gaba@intel.com>
Tested-by: Bae, Hansang <hansang.bae@intel.com>
Reviewed-by: Peryt, Sebastian <sebastian.peryt@intel.com>

--- a/openmp/libomptarget/test/lit.cfg
+++ b/openmp/libomptarget/test/lit.cfg
@@ -89,8 +89,12 @@ elif config.operating_system == 'Darwin':
     config.test_flags += " -Wl,-rpath," + config.library_dir
     config.test_flags += " -Wl,-rpath," + config.omp_host_rtl_directory
 else: # Unices
-    config.test_flags += " -Wl,-rpath," + config.library_dir
-    config.test_flags += " -Wl,-rpath," + config.omp_host_rtl_directory
+# INTEL_CUSTOMIZATION
+    # -Wl,-rpath does not work with our build/test environment for some reason,
+    # so stick to the previous method that use LD_LIBRARY_PATH.
+    append_dynamic_library_path('LD_LIBRARY_PATH', config.library_dir, ":")
+    append_dynamic_library_path('LD_LIBRARY_PATH', config.omp_host_rtl_directory, ":")
+#end INTEL_CUSTOMIZATION
     if config.cuda_libdir:
         config.test_flags += " -Wl,-rpath," + config.cuda_libdir
     append_dynamic_library_path('LIBRARY_PATH', config.library_dir, ":")
