CMPLRTST-14216: Rework WA for compilers missing sycl/sycl.hpp
Some versions of compilers do not support sycl/sycl.hpp
This change moves workaround from individual tests to LIT infra

Change-Id: I686f1d1c1d4d7b117232b4ac6ca79653a52c4cf9
Reviewed-on: https://git-amr-2.devtools.intel.com/gerrit/339104
Tested-by: xmain_checkin <lab_iclt@iclgerrit.sc.intel.com>
Reviewed-by: Romanov, Vlad <vlad.romanov@intel.com>
Reviewed-by: Mikhail Lychkov <mikhail.lychkov@intel.com>

--- a/sycl/test/on-device/lit.site.cfg.py.in
+++ b/sycl/test/on-device/lit.site.cfg.py.in
@@ -26,6 +26,9 @@ config.llvm_enable_projects = "@LLVM_ENABLE_PROJECTS@"
 
 config.sycl_threads_lib = '@SYCL_THREADS_LIB@'
 config.extra_environment = lit_config.params.get("extra_environment", "@LIT_EXTRA_ENVIRONMENT@")
+# INTEL_CUSTOMIZATION
+config.extra_include = "@CMAKE_CURRENT_SOURCE_DIR@/../include"
+# end INTEL_CUSTOMIZATION
 
 import lit.llvm
 lit.llvm.initialize(lit_config, config)
