--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,6 +1,5 @@
 # These owners will be the default owners for everything in
 # the repo. Unless a later match takes precedence
-# NOTE: will add Chenyang Liu once his access is set up
 #
-* @mlychkov
+* @mlychkov @Chenyang-L
 
