--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,5 +1,4 @@
 # These owners will be the default owners for everything in
 # the repo. Unless a later match takes precedence
-# NOTE: will add Chenyang Liu and Vasiliy Kurkov once their access is set up
 #
-* @mlychkov
+* @mlychkov @Chenyang-L @vkurkov
