--- a/llvm/Intel_OptionalComponents/DTrans/lib/Transforms/CMakeLists.txt
+++ b/llvm/Intel_OptionalComponents/DTrans/lib/Transforms/CMakeLists.txt
@@ -38,6 +38,7 @@ add_llvm_component_library(LLVMIntel_DTransOpt
   SOAToAOSClassInfo.cpp
   SOAToAOSCommon.cpp
   SOAToAOSEffects.cpp
+  SOAToAOSOPEffects.cpp
   SOAToAOSPrepare.cpp
   SOAToAOSStruct.cpp
   Transpose.cpp
