[DPCPPKernelTransforms] Port CoerceWin64Types pass (#38)
This pass is needed for both CPU and non-spirv CPU device on Windows 64 to
ensure Win64 ABI compliance.

--- a/llvm/lib/Transforms/Intel_DPCPPKernelTransforms/CMakeLists.txt
+++ b/llvm/lib/Transforms/Intel_DPCPPKernelTransforms/CMakeLists.txt
@@ -3,6 +3,7 @@ add_llvm_component_library(LLVMIntel_DPCPPKernelTransforms
   AddImplicitArgs.cpp
   BuiltinCallToInst.cpp
   BuiltinImport.cpp
+  CoerceWin64Types.cpp
   DPCPPEqualizer.cpp
   DPCPPKernelTransforms.cpp
   DPCPPKernelVecClone.cpp
