CMPLRLLVM-38912: Convert min/max blobs into select instructions pass (#7177)
* [NFC] CMPLRLLVM-38912: Convert min/max blobs into select instructions pass

This change set implements a new pass in loop-opt that will convert
the smin, smax, umin, umax blobs into min/max select instructions if
there is a cycle and the blobs are in the innermost loop. The goal
is to trigger the safe reduction analysis and vectorization can be
achieved.

* Fix for Pankaj' comments, added new test cases, removed legacy pass manager

* Fix for Pankaj's comments, added extra lit tests, added statistics

* Minor fixes for data collection and typo

--- a/llvm/lib/Transforms/Intel_LoopTransforms/CMakeLists.txt
+++ b/llvm/lib/Transforms/Intel_LoopTransforms/CMakeLists.txt
@@ -83,6 +83,7 @@ add_llvm_component_library(LLVMIntel_LoopTransforms
         HIRArrayScalarizationTestLauncher.cpp
         HIRArrayScalarization.cpp
         HIRIfReversal.cpp
+        HIRMinMaxBlobToSelectPass.cpp
 # INTEL_FEATURE_SW_ADVANCED
         HIRInterLoopBlocking.cpp
         HIRCrossLoopArrayContraction.cpp
