[OpenCL] Enable code coverage in ocl cpu rt (#7276)
* [OpenCL] Enable code coverage in ocl cpu rt, part 1

CMPLRLLVM-33685: We did several things here to support code coverage
in ocl cpu runtime side:
1.Load clang_rt.profile lib if the program was built with coverage
  enabled
2.Handle 'atexit' symbol which is used by clang_rt.profile lib
3.Manually call code coverage data write out functions when the user
  program is destroyed

--- a/opencl-intel/tests/framework_test_type/CMakeLists.txt
+++ b/opencl-intel/tests/framework_test_type/CMakeLists.txt
@@ -88,6 +88,8 @@ add_ocl_unittest_artifacts(
     data/cached_binary_gold_update2_release_windows32.bin
     data/cached_binary_without_section.bin
     data/cached_binary_with_wrong_version.bin
+    data/code_coverage.bc
+    data/code_coverage_linux.bin
     data/fp-as-kernel-arg.spv
     data/replace-module-after-optimizer.ll
     data/replace-module-before-optimizer.ll
