--- a/opencl-intel/tests/lit.cfg
+++ b/opencl-intel/tests/lit.cfg
@@ -75,6 +75,11 @@ tbb_library_dir = getattr(config, 'tbb_library_dir', None)
 if tbb_library_dir is None:
     lit_config.fatal('tbb_library_dir is not set!')
 
+# path to clang profile lib
+clang_lib_dir = getattr(config, 'clang_lib_dir', None)
+if clang_lib_dir is None:
+    lit_config.fatal('clang_lib_dir is not set!')
+
 # Add opencl_binary_dir to the PATH env. variable
 if config.operating_system == 'Windows':
     path_var = 'PATH'
@@ -91,6 +96,14 @@ config.environment[path_var] = os.path.pathsep.join((
 
 config.environment[path_var] = os.path.pathsep.join((
     tbb_library_dir, config.environment[path_var]))
+
+# Add clang profile lib to the CL_CONFIG_FORCE_PROFILE_LIB_PATH env
+if config.operating_system == 'Windows':
+    config.environment['CL_CONFIG_FORCE_PROFILE_LIB_PATH'] = os.path.join(
+        clang_lib_dir, 'clang_rt.profile-x86_64.lib')
+else:
+    config.environment['CL_CONFIG_FORCE_PROFILE_LIB_PATH'] = os.path.join(
+        clang_lib_dir, 'libclang_rt.profile.a')
 
 if config.intree_build == "ON":
     # Add libcommon_clang library to paths:
