[AMX]Support new AMX instructions (#6980)
// INTEL_FEATURE_ISA_AMX_FP8
1. Change the existing AMX-BF8 to AMX-FP8
2. Support encoding/decoding of AMX-FP8 instructions
// end INTEL_FEATURE_ISA_AMX_FP8

--- a/clang/lib/Headers/CMakeLists.txt
+++ b/clang/lib/Headers/CMakeLists.txt
@@ -55,12 +55,12 @@ intel_add_file(INTEL_HEADERS
   Intel_Headers/csa/bits/mathinline.h
   )
 # end INTEL_FEATURE_CSA
-# INTEL_FEATURE_ISA_AMX_BF8
+# INTEL_FEATURE_ISA_AMX_FP8
 intel_add_file(INTEL_HEADERS
-  FEATURE ${LLVM_INTELFEATURE_PREFIX}_ISA_AMX_BF8
-  Intel_amxbf8intrin.h
+  FEATURE ${LLVM_INTELFEATURE_PREFIX}_ISA_AMX_FP8
+  Intel_amxfp8intrin.h
   )
-# end INTEL_FEATURE_ISA_AMX_BF8
+# end INTEL_FEATURE_ISA_AMX_FP8
 # INTEL_FEATURE_ISA_AMX_MEMADVISE
 intel_add_file(INTEL_HEADERS
   FEATURE ${LLVM_INTELFEATURE_PREFIX}_ISA_AMX_MEMADVISE
