[ESIMD] Do simd<T, N>* to <N x T> arg / ret type conv when possible. (#6835) (#7363)
* [ESIMD] Do simd<T, N>* to <N x T> arg / ret type conv when possible. (#6835)

Today, `simd<T, N > foo(simd<T, N> x)` is codegenerated by clang as
`void foo(simd<T, N>* sret(simd<T, N>) % res, simd<T, N>*% x)`
for the SPIRV target(unless `__regcall` is specified), which is then
converted to
`void foo(<N x T>*sret(<N x T>) % res, <N x T>*%x)`
in the LowerESIMDVecArg, then to
`<N x T > foo(<N x T> % x)`
in the VC BE.

With the opaque pointers this becomes impossible, and the optimization
must happen in the "ESIMD FE".This patch implements it.

It also changes `lowerEsimdConstructs` in sycl - post - link.cpp to use new
pass manager to avoid the old pass manager - related boiler plate code in
new ESIMD transformations.

Signed-off-by: Konstantin S Bobrovsky <konstantin.s.bobrovsky@intel.com>

* Make Analysis component dep for sycl-post-link match open-source.

Signed-off-by: Konstantin S Bobrovsky <konstantin.s.bobrovsky@intel.com>

--- a/llvm/tools/sycl-post-link/CMakeLists.txt
+++ b/llvm/tools/sycl-post-link/CMakeLists.txt
@@ -25,9 +25,6 @@ include_directories(
 endif()
 
 set(LLVM_LINK_COMPONENTS
-# INTEL_CUSTOMIZATION
-  Analysis
-# end INTEL_CUSTOMIZATION
   BitWriter
   Core
   IPO
@@ -43,6 +40,8 @@ set(LLVM_LINK_COMPONENTS
   InstCombine
   ScalarOpts
   Linker
+  Passes
+  Analysis
   )
 
 get_property(LLVMGenXIntrinsics_SOURCE_DIR GLOBAL PROPERTY LLVMGenXIntrinsics_SOURCE_PROP)
