Resolve of merge (build) of resolve of merge (conflict) 5750ae70f7f7 Merge 8e0b9d65f701 Resolve of merge (conflict) 5750ae70f7f7 Merge from 'xmain.. 'xmain-cand' -> 'xmain' (xmain-cand@head => xma.. 'xmain' -> 'xmain-web' (1 commits) (#7402) (#7409)
* Resolve of merge (build) of resolve of merge (conflict) 5750ae70f7f7 Merge 8e0b9d65f701 Resolve of merge (conflict) 5750ae70f7f7 Merge from 'xmain.. 'xmain-cand' -> 'xmain' (xmain-cand@head => xma.. 'xmain' -> 'xmain-web' (1 commits) (#7402)

  commit 8e0b9d65f701fae8e1eac5d8327c03d7500a256c
  Author: iclsrc <iclsrc@intel.com>
  Date:   Thu Sep 22 22:44:16 2022 -0700

      Resolve of merge (conflict) 5750ae70f7f7 Merge from 'xmain-cand' to 'xmain' (xmain-cand@head => xma.. 'xmain' -> 'xmain-web' (1 commits) (#7402)

      CONFLICT (content): Merge conflict in llvm/test/Transforms/InstCombine/icmp-trunc.ll
        CONFLICT (modify/delete): llvm/test/Transforms/ExpandLargeDivRem/urem129.ll deleted in HEAD and modified in 5750ae70f7f7fcc82d335ba0af231a16fe3c7d97. Version 5750ae70f7f7fcc82d335ba0af231a16fe3c7d97 of llvm/test/Transforms/ExpandLargeDivRem/urem129.ll left in tree.
        CONFLICT (modify/delete): llvm/test/Transforms/ExpandLargeDivRem/udiv129.ll deleted in HEAD and modified in 5750ae70f7f7fcc82d335ba0af231a16fe3c7d97. Version 5750ae70f7f7fcc82d335ba0af231a16fe3c7d97 of llvm/test/Transforms/ExpandLargeDivRem/udiv129.ll left in tree.
        CONFLICT (modify/delete): llvm/test/Transforms/ExpandLargeDivRem/sdiv129.ll deleted in HEAD and modified in 5750ae70f7f7fcc82d335ba0af231a16fe3c7d97. Version 5750ae70f7f7fcc82d335ba0af231a16fe3c7d97 of llvm/test/Transforms/ExpandLargeDivRem/sdiv129.ll left in tree.
        CONFLICT (content): Merge conflict in llvm/test/CodeGen/X86/expand-large-div-rem-udiv129.ll
        CONFLICT (content): Merge conflict in llvm/test/Analysis/CostModel/X86/intel-vec-mul.ll
        CONFLICT (content): Merge conflict in llvm/lib/Transforms/Vectorize/Intel_VPlan/IntelVPlanCost

--- a/openmp/libomptarget/plugins/CMakeLists.txt
+++ b/openmp/libomptarget/plugins/CMakeLists.txt
@@ -47,6 +47,9 @@ if(CMAKE_SYSTEM_PROCESSOR MATCHES "${tmachine}$")
     add_definitions("-DTARGET_ELF_ID=${elf_machine_id}")
 
       if(INTEL_CUSTOMIZATION)
+        if(NOT LIBOMPTARGET_DEP_LIBELF_FOUND)
+          message(FATAL_ERROR "Required dependency LIBELF is not found")
+        endif()
         add_library(ffi-stub SHARED
           ${CMAKE_CURRENT_SOURCE_DIR}/../generic-elf-64bit/src/ffi_stub.c)
         target_compile_definitions(ffi-stub PRIVATE INTEL_CUSTOMIZATION=1)
@@ -61,6 +64,7 @@ if(CMAKE_SYSTEM_PROCESSOR MATCHES "${tmachine}$")
           "omptarget.rtl.${tmachine_libname}"
           elf_common
           ${LIBOMPTARGET_DEP_LIBFFI_LIBRARIES}
+          ${LIBOMPTARGET_DEP_LIBELF_LIBRARIES}
           dl
           ${OPENMP_PTHREAD_LIB}
           "-Wl,--version-script=${CMAKE_CURRENT_SOURCE_DIR}/../exports")
