[OpenMP][Offload] Include debug information in the runtime (#7421)
JIRA: CMPLRLIBS-34103

--- a/openmp/libomptarget/CMakeLists.txt
+++ b/openmp/libomptarget/CMakeLists.txt
@@ -196,6 +196,14 @@ if (INTEL_CUSTOMIZATION)
 
     message(STATUS "omp.h found: ${LIBOMP_OMP_H_FILE}")
   endif()
+
+  # Enable debug information
+  if(WIN32)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zi")
+    add_link_options("/DEBUG")
+  else()
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
+  endif()
 endif(INTEL_CUSTOMIZATION)
 
 # Build target agnostic offloading library.
