[AMX] Support AMX-FP8 intrinsics JIRA: CMPLRLLVM-39973 (#7763)
* [AMX] Support AMX-FP8 intrinsics
JIRA: CMPLRLLVM-39973

* [AMX] Support AMX-FP8 intrinsics (2)

--- a/clang/lib/Headers/CMakeLists.txt
+++ b/clang/lib/Headers/CMakeLists.txt
@@ -61,6 +61,12 @@ intel_add_file(INTEL_HEADERS
   Intel_amxfp8intrin.h
   )
 # end INTEL_FEATURE_ISA_AMX_FP8
+# INTEL_FEATURE_ISA_AMX_FP8_FUTURE
+intel_add_file(INTEL_HEADERS
+  FEATURE ${LLVM_INTELFEATURE_PREFIX}_ISA_AMX_FP8_FUTURE
+  Intel_amxfp8futureintrin.h
+  )
+# end INTEL_FEATURE_ISA_AMX_FP8_FUTURE
 # INTEL_FEATURE_ISA_AMX_MEMADVISE
 intel_add_file(INTEL_HEADERS
   FEATURE ${LLVM_INTELFEATURE_PREFIX}_ISA_AMX_MEMADVISE
