[OpenCL] Use newly build clang to build soft_math builtins (#7449)

--- a/opencl-intel/backend/CMakeLists.txt
+++ b/opencl-intel/backend/CMakeLists.txt
@@ -19,8 +19,10 @@ if (NOT OPENCL_INTREE_BUILD)
   set(LLVM_PATH ${LLVM_PATH_BE})
   find_package(LLVM REQUIRED)
   set(CLANG_BIN_PATH "${LLVM_BINARY_DIR}/clang")
+  set(CLANG_CL_BIN_PATH "${LLVM_BINARY_DIR}/clang-cl")
 else()
   set(CLANG_BIN_PATH "${LLVM_BINARY_DIR}/bin/clang")
+  set(CLANG_CL_BIN_PATH "${LLVM_BINARY_DIR}/bin/clang-cl")
 endif()
 
 set( INTEL_COLLAB ON )
