review/haonanya/haonan/cherry pick (#7904)
* [SYCL] Use -fsemantic-interposition for device_selector.cpp (#7022)

We build the whole project with `-fno-semantic-interposition` by default
and it gets miscompiled by clang after intel/llvm#6896.

It's not yet clear if this would be a permanent fix or if there is a bug
in clang. The issue is being tracked at llvm/llvm-project#58295.

* [SYCL][CMake] Check for compiler support before adding a flag (#7051)

Fixes the issue introduced by https://github.com/intel/llvm/pull/7022.

Co-authored-by: aelovikov-intel <andrei.elovikov@intel.com>

--- a/sycl/source/CMakeLists.txt
+++ b/sycl/source/CMakeLists.txt
@@ -253,6 +253,12 @@ intel_clear_stdlib()
 # end INTEL_CUSTOMIZATION
 endif()
 
+check_cxx_compiler_flag(-fsemantic-interposition HAS_SEMANTIC_INTERPOSITION_FLAG)
+if (HAS_SEMANTIC_INTERPOSITION_FLAG)
+  # See https://github.com/llvm/llvm-project/issues/58295.
+  set_source_files_properties(device_selector.cpp PROPERTIES COMPILE_FLAGS -fsemantic-interposition)
+endif()
+
 if (WIN32)
 set(LIB_NAME "sycl${SYCL_MAJOR_VERSION}")
 else()
